<resources>
    <string name="app_name">Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1400319156936306</string>
    <string name="devby"> This game was developed by students of IIT</string>
    <string name="open">Quiz is a free open source application for everyone</string>
    <string name="scr"> First, you play games by defining a number of points to be made in early partie.Par instance the first question answered correctly you get a score of 50 points</string>
    <string name="regscore">How is your score calculated?</string>
    <string name="reg">The rules of our game:</string>
    <string name="reg1"> First you must choose a theme quiz which contains a series of questions.Vous have 3 lives therefore entitled to three chances to complete our quiz.</string>
    <string name="Random">Random</string>
    <string name="History">History</string>
    <string name="Animal">Animals</string>
    <string name="food">Food</string>
    <string name="science">Science</string>
    <string name="techno">Technology</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="btn_login">Login</string>
    <string name="btn_loginfb">Login wirh facebook</string>
    <string name="btn_Play">Play</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registercompleted">Your registration has been successfully completed</string>
    <string name="register">register</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_catalogue">CatalogueActivity</string>
</resources>
