<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" >
    <Button
        android:id="@+id/btn_cat1"
        android:text="@string/Random"
        android:textColor="#FFFFFF"
        android:textSize="35px"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#8d3a91cb"
        android:shadowColor="#7B8A89"
        android:shadowDx="-2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:alpha="0.8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btn_cat2"
        android:text="@string/History"
        android:textColor="#FFFFFF"
        android:textSize="35px"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#8d3a91cb"
        android:shadowColor="#7B8A89"
        android:shadowDx="-2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:alpha="0.8"
        android:layout_below="@id/btn_cat1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        />
    <Button
        android:id="@+id/btn_cat3"
        android:text="@string/Animal"
        android:textColor="#FFFFFF"
        android:textSize="35px"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#8d3a91cb"
        android:shadowColor="#7B8A89"
        android:shadowDx="-2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:alpha="0.8"
        android:layout_below="@id/btn_cat2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_cat4"
        android:text="@string/food"
        android:textColor="#FFFFFF"
        android:textSize="35px"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#8d3a91cb"
        android:shadowColor="#7B8A89"
        android:shadowDx="-2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:alpha="0.8"
        android:layout_below="@id/btn_cat3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_cat5"
        android:text="@string/science"
        android:textColor="#FFFFFF"
        android:textSize="35px"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#8d3a91cb"
        android:shadowColor="#7B8A89"
        android:shadowDx="-2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:alpha="0.8"
        android:layout_below="@id/btn_cat4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_cat6"
        android:text="@string/techno"
        android:textColor="#FFFFFF"
        android:textSize="35px"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#8d3a91cb"
        android:shadowColor="#7B8A89"
        android:shadowDx="-2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:alpha="0.8"
        android:layout_below="@+id/btn_cat5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />
</RelativeLayout>

